Adding Identity Server Pattern2

--- a/Scalable-IS/pattern-1.yaml
+++ b/Scalable-IS/pattern-1.yaml
@@ -10,6 +10,7 @@ Metadata:
           - AWSAccessKeyId
           - AWSAccessKeySecret
           - KeyPairName
+          - WSO2InstanceType
       - Label:
           default: Network Configurations
         Parameters:
