--- a/is-samples/test-is-samples.yml
+++ b/is-samples/test-is-samples.yml
@@ -63,14 +63,7 @@ Parameters:
   AMI:
     Type: String
     Description: AMI of the deployment [Ubuntu AMI with JDK installed].
-  JDK:
-    Type: String
-    Default: "ORACLE_JDK8"
-    Description: Target Java version
-    AllowedValues:
-      - ORACLE_JDK7
-      - ORACLE_JDK8
-  EC2KeyPair:
+  KeyPairName:
     Description: This is used to ssh to the node. If you don't have a key, please create one from AWS console and rerun the script
     Type: "AWS::EC2::KeyPair::KeyName"
   WSO2ISInstanceType:
@@ -90,7 +83,6 @@ Parameters:
       - m3.large
       - m3.xlarge
       - m3.2xlarge
-      - m4.large
     ConstraintDescription: must be a valid EC2 instance type
   ISHttpsUrl:
     Type: String
@@ -112,17 +104,6 @@ Resources:
       Tags:
         - Key: Name
           Value: wso2-vpc
-  WSO2EnvPrivateSubnet1:
-    Type: 'AWS::EC2::Subnet'
-    Properties:
-      CidrBlock: 10.0.1.0/24
-      AvailabilityZone: !Select
-        - '0'
-        - !GetAZs ''
-      VpcId: !Ref WSO2EnvVPC
-      Tags:
-        - Key: Name
-          Value: wso2-private-subnet-1
   WSO2EnvPublicSubnet1:
     Type: 'AWS::EC2::Subnet'
     Properties:
@@ -134,17 +115,6 @@ Resources:
       Tags:
         - Key: Name
           Value: wso2-public-subnet-1
-  WSO2EnvPublicSubnet2:
-    Type: 'AWS::EC2::Subnet'
-    Properties:
-      CidrBlock: 10.0.252.0/24
-      AvailabilityZone: !Select
-        - '1'
-        - !GetAZs ''
-      VpcId: !Ref WSO2EnvVPC
-      Tags:
-        - Key: Name
-          Value: wso2-public-subnet-2
   WSO2EnvInternetGateway:
     Type: 'AWS::EC2::InternetGateway'
     Properties: {}
@@ -165,11 +135,11 @@ Resources:
     Type: 'AWS::EC2::RouteTable'
     Properties:
       VpcId: !Ref WSO2EnvVPC
-  WSO2EnvBastionEIPAssociation:
+  WSO2EnvSampleEIPAssociation:
     Type: 'AWS::EC2::EIPAssociation'
     Properties:
-      AllocationId: !GetAtt WSO2EnvBastionEIP.AllocationId
-      InstanceId: !Ref WSO2EnvBastionInstance
+      AllocationId: !GetAtt WSO2EnvSampleEIP.AllocationId
+      InstanceId: !Ref WSO2EnvSampleInstance
 
   ################################
   # Create network configurations
@@ -200,21 +170,11 @@ Resources:
       RuleAction: allow
       RuleNumber: '100'
       NetworkAclId: !Ref WSO2EnvNetworkAcl
-  subnetacl1:
-    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
-    Properties:
-      NetworkAclId: !Ref WSO2EnvNetworkAcl
-      SubnetId: !Ref WSO2EnvPrivateSubnet1
   subnetacl2:
     Type: 'AWS::EC2::SubnetNetworkAclAssociation'
     Properties:
       NetworkAclId: !Ref WSO2EnvNetworkAcl
       SubnetId: !Ref WSO2EnvPublicSubnet1
-  subnetacl3:
-      Type: 'AWS::EC2::SubnetNetworkAclAssociation'
-      Properties:
-        NetworkAclId: !Ref WSO2EnvNetworkAcl
-        SubnetId: !Ref WSO2EnvPublicSubnet2
   gw1:
     Type: 'AWS::EC2::VPCGatewayAttachment'
     Properties:
@@ -225,16 +185,6 @@ Resources:
     Properties:
       RouteTableId: !Ref WSO2EnvPublicRouteTable1
       SubnetId: !Ref WSO2EnvPublicSubnet1
-  subnetroute2:
-      Type: 'AWS::EC2::SubnetRouteTableAssociation'
-      Properties:
-        RouteTableId: !Ref WSO2EnvPublicRouteTable1
-        SubnetId: !Ref WSO2EnvPublicSubnet2
-  subnetroute3:
-    Type: 'AWS::EC2::SubnetRouteTableAssociation'
-    Properties:
-      RouteTableId: !Ref WSO2EnvRouteTable2
-      SubnetId: !Ref WSO2EnvPrivateSubnet1
   route1:
     Type: 'AWS::EC2::Route'
     Properties:
@@ -272,35 +222,13 @@ Resources:
         ToPort: 8080
         CidrIp: 0.0.0.0/0
       - IpProtocol: tcp
-        FromPort: 8140
-        ToPort: 8140
-        CidrIp: !GetAtt WSO2EnvVPC.CidrBlock
-      - IpProtocol: tcp
-        FromPort: 5701
-        ToPort: 5701
-        CidrIp: !GetAtt WSO2EnvVPC.CidrBlock
-      - IpProtocol: tcp
-        FromPort: 9763
-        ToPort: 9763
-        SourceSecurityGroupId: !Ref WSO2EnvLBSecurityGroup
-      - IpProtocol: tcp
-        FromPort: 9443
-        ToPort: 9443
-        SourceSecurityGroupId: !Ref WSO2EnvLBSecurityGroup
-  WSO2EnvLBSecurityGroup:
-    Type: 'AWS::EC2::SecurityGroup'
-    Properties:
-      GroupDescription: Security group for IS ALB
-      VpcId: !Ref WSO2EnvVPC
-      SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: 443
-        ToPort: 443
+        FromPort: 8443
+        ToPort: 8443
         CidrIp: 0.0.0.0/0
   ###########################
   # Create Elastic IPs
   ###########################
-  WSO2EnvBastionEIP:
+  WSO2EnvSampleEIP:
     Type: 'AWS::EC2::EIP'
     Properties:
       Domain: vpc
@@ -312,7 +240,7 @@ Resources:
   #######################
   # EC2 Compute instances
   #######################
-  WSO2EnvBastionInstance:
+  WSO2EnvSampleInstance:
     Type: 'AWS::EC2::Instance'
     #CreationPolicy:
       #ResourceSignal:
@@ -323,7 +251,7 @@ Resources:
       InstanceInitiatedShutdownBehavior: stop
       ImageId: !Ref AMI
       InstanceType: t2.micro
-      KeyName: !Ref EC2KeyPair
+      KeyName: !Ref KeyPairName
       Monitoring: 'false'
       Tags:
         - Key: Name
@@ -360,12 +288,12 @@ Resources:
           sed -i 's,http://localhost:8080,http://'$(curl http://169.254.169.254/latest/meta-data/public-ipv4)':8080,g' webapps/travelocity.com/WEB-INF/classes/travelocity.properties
           cd bin
           sh catalina.sh start
-          #/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2EnvBastionInstance --region ${AWS::Region}
+          #/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2EnvSampleInstance --region ${AWS::Region}
 
 #####################################
 # Print details of the created stack 
 #####################################
 Outputs:
   ISSamplesHttpUrl:
-    Value: !Sub 'http://${WSO2EnvBastionInstance.PublicIp}:8080'
+    Value: !Sub 'http://${WSO2EnvSampleInstance.PublicIp}:8080'
     Description: Public access Tomcat URL
