--- a/is-samples/test-is-samples.yml
+++ b/is-samples/test-is-samples.yml
@@ -87,6 +87,9 @@ Parameters:
   ISHttpsUrl:
     Type: String
     Description: Enter the URL of the WSO2 IS deployment.
+  ProductVersion:
+    Type: String
+    Description: Enter the WSO2 IS Product Version.
 ################################
 # Create AWS resources
 ################################
@@ -279,8 +282,8 @@ Resources:
           sudo apt-get -y install zip
           unzip apache-tomcat-8.5.35.zip
 
-          wget http://maven.wso2.org/nexus/content/repositories/releases/org/wso2/is/org.wso2.sample.is.sso.agent/5.7.0/org.wso2.sample.is.sso.agent-5.7.0.war
-          unzip org.wso2.sample.is.sso.agent-5.7.0.war -d travelocity.com
+          wget http://maven.wso2.org/nexus/content/repositories/releases/org/wso2/is/org.wso2.sample.is.sso.agent/${ProductVersion}/org.wso2.sample.is.sso.agent-${ProductVersion}.war
+          unzip org.wso2.sample.is.sso.agent-${ProductVersion}.war -d travelocity.com
           mv travelocity.com apache-tomcat-8.5.35/webapps/
           cd /opt/testgrid/workspace/TOMCATHOME/apache-tomcat-8.5.35/
 
