Update CFN signal loop condition

--- a/scalable-is/scalable-is.yaml
+++ b/scalable-is/scalable-is.yaml
@@ -550,6 +550,7 @@ Resources:
           wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
           if [ $? -eq "0" ] ; then
               /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode1AutoScalingGroup --region ${AWS::Region}
+              break
           fi
           done
     DependsOn:
@@ -661,6 +662,7 @@ Resources:
           wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
           if [ $? -eq "0" ] ; then
               /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode2AutoScalingGroup --region ${AWS::Region}
+              break
           fi
           done
     DependsOn:
