Add default value to ES endpoint

--- a/scalable-is/scalable-is.yaml
+++ b/scalable-is/scalable-is.yaml
@@ -941,6 +941,7 @@ Parameters:
       - Ubuntu1804
   ElasticSearchEndpoint:
     Type: String
+    Default: ""
 Mappings:
   WSO2PuppetMasterRegionMap:
     ap-southeast-2:
