--- a/scalable-is/scalable-is.yaml
+++ b/scalable-is/scalable-is.yaml
@@ -505,30 +505,43 @@ Resources:
           #cloud-boothook
           #!/bin/bash
           export PATH=~/.local/bin:$PATH
-          apt-get update
-          apt install -y python-pip
+          if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              apt-get update
+              apt install -y puppet nfs-common
+              apt install -y python-pip
+              sed -i '/\[main\]/a server=puppet' /etc/puppet/puppet.conf
+          fi
+          if [[ ${OperatingSystem} == "CentOS7" ]]; then
+              yum install -y epel-release unzip nfs-utils
+              yum install -y python-pip
+              rpm -Uvh https://yum.puppetlabs.com/puppet5/puppet5-release-el-7.noarch.rpm
+              yum install -y puppet-agent
+              echo $'[main]\nserver = puppet\ncertname = agent1\nenvironment = production\n\runinterval = 1h' > /etc/puppetlabs/puppet/puppet.conf
+          fi
           pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
-          apt-get install -y puppet
-          apt-get install -y nfs-common
-          sed -i '/\[main\]/a server=puppet' /etc/puppet/puppet.conf
           export ProductVersion=5.7.0
-          sed -i "s/Product_Version/5.7.0/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s^secret-key^${AWSAccessKeySecret}^g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s/access-key/${AWSAccessKeyId}/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s^ELASTICSEARCH_ENDPOINT^${ElasticSearchEndpoint}^g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/Product_Version/5.7.0/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s^secret-key^${AWSAccessKeySecret}^g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/access-key/${AWSAccessKeyId}/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s^ELASTICSEARCH_ENDPOINT^${ElasticSearchEndpoint}^g" /usr/lib/logstash-6.5.1/logstash-IS.conf
           export INSTANCEID=$(ec2metadata | grep -m 1 'instance-id:' | awk '{print $2}')
-          sed -i "s/INSTANCE_ID/$INSTANCEID/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s/STACK_NAME/${AWS::StackName}/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s/REGION_NAME/${AWS::Region}/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          nohup /home/ubuntu/logstash-6.5.1/bin/logstash -f /home/ubuntu/logstash-6.5.1/logstash-IS.conf &
+          sed -i "s/INSTANCE_ID/$INSTANCEID/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/STACK_NAME/${AWS::StackName}/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/REGION_NAME/${AWS::Region}/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          nohup /usr/lib/logstash-6.5.1/bin/logstash -f /usr/lib/logstash-6.5.1/logstash-IS.conf &
           export PuppetmasterIP=${PuppetMaster.PrivateIp}
           echo "$PuppetmasterIP puppet puppetmaster" >> /etc/hosts
           service puppet restart
           mkdir -p /mnt/efs
           mount -t nfs4 -o nfsvers=4.1 ${WSO2ISEFSFileSystem}.efs.${AWS::Region}.amazonaws.com:/ /mnt/efs
-          sleep 180
+          sleep 280
           export FACTER_profile=is570
-          puppet agent -vt
+          if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              puppet agent -vt
+          fi
+          if [[ ${OperatingSystem} == "CentOS7" ]]; then
+              /opt/puppetlabs/bin/puppet agent -vt
+          fi
           sleep 10
           if [ ! -d "/mnt/efs/server" ]; then
               mkdir -p /mnt/efs/server
@@ -542,21 +555,31 @@ Resources:
           fi
           rm -rf /usr/lib/wso2/wso2is/5.7.0/wso2is-5.7.0/repository/tenants
           ln -s /mnt/efs/tenants /usr/lib/wso2/wso2is/5.7.0/wso2is-5.7.0/repository/tenants
-          apt-get install -y python3-pip
-          pip3 install boto3
           echo "${WSO2ISEFSFileSystem}:/ /mnt/efs efs defaults,_netdev 0 0" >> /etc/fstab
           /usr/lib/wso2/wso2is/5.7.0/wso2is-5.7.0/bin/wso2server.sh start
           ${CustomUserData}
+          if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              end=$((SECONDS+600))
+              while [ $SECONDS -lt $end ] ; do
+                  wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
+                  if [ $? -eq "0" ] ; then
+                    /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode1AutoScalingGroup --region ${AWS::Region}
+                    break
+                  fi
+              done
+          fi
+          if [[ ${OperatingSystem} == "CentOS7" ]]; then
+              end=$((SECONDS+1200))
+              while [ $SECONDS -lt $end ] ; do
+                  wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
+                  if [ $? -eq "0" ] ; then
+                    /usr/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode1AutoScalingGroup --region ${AWS::Region}
+                    break
+                  fi
+              done
+          fi
           echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
           cat /dev/null > ~/.bash_history && history -c
-          end=$((SECONDS+600))
-          while [ $SECONDS -lt $end ] ; do
-              wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
-              if [ $? -eq "0" ] ; then
-                  /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode1AutoScalingGroup --region ${AWS::Region}
-                  break
-              fi
-          done
     DependsOn:
       - WSO2ISSecurityGroup
       - WSO2ISLoadBalancer
@@ -584,7 +607,7 @@ Resources:
     CreationPolicy:
       ResourceSignal:
         Count: 1
-        Timeout: PT20M
+        Timeout: PT25M
     UpdatePolicy:
       AutoScalingRollingUpdate:
         MaxBatchSize: '2'
@@ -617,22 +640,30 @@ Resources:
           #cloud-boothook
           #!/bin/bash
           export PATH=~/.local/bin:$PATH
-          apt-get update
-          apt install -y python-pip
+          if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              apt-get update
+              apt install -y puppet nfs-common
+              apt install -y python-pip
+              sed -i '/\[main\]/a server=puppet' /etc/puppet/puppet.conf
+          fi
+          if [[ ${OperatingSystem} == "CentOS7" ]]; then
+              yum install -y epel-release unzip nfs-utils
+              yum install -y python-pip
+              rpm -Uvh https://yum.puppetlabs.com/puppet5/puppet5-release-el-7.noarch.rpm
+              yum install -y puppet-agent
+              echo $'[main]\nserver = puppet\ncertname = agent2\nenvironment = production\n\runinterval = 1h' > /etc/puppetlabs/puppet/puppet.conf
+          fi
           pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
-          apt-get install -y puppet
-          apt-get install -y nfs-common
-          sed -i '/\[main\]/a server=puppet' /etc/puppet/puppet.conf
           export ProductVersion=5.7.0
-          sed -i "s/Product_Version/5.7.0/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s^secret-key^${AWSAccessKeySecret}^g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s/access-key/${AWSAccessKeyId}/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s^ELASTICSEARCH_ENDPOINT^${ElasticSearchEndpoint}^g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/Product_Version/5.7.0/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s^secret-key^${AWSAccessKeySecret}^g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/access-key/${AWSAccessKeyId}/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s^ELASTICSEARCH_ENDPOINT^${ElasticSearchEndpoint}^g" /usr/lib/logstash-6.5.1/logstash-IS.conf
           export INSTANCEID=$(ec2metadata | grep -m 1 'instance-id:' | awk '{print $2}')
-          sed -i "s/INSTANCE_ID/$INSTANCEID/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s/STACK_NAME/${AWS::StackName}/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          sed -i "s/REGION_NAME/${AWS::Region}/g" /home/ubuntu/logstash-6.5.1/logstash-IS.conf
-          nohup /home/ubuntu/logstash-6.5.1/bin/logstash -f /home/ubuntu/logstash-6.5.1/logstash-IS.conf &
+          sed -i "s/INSTANCE_ID/$INSTANCEID/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/STACK_NAME/${AWS::StackName}/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          sed -i "s/REGION_NAME/${AWS::Region}/g" /usr/lib/logstash-6.5.1/logstash-IS.conf
+          nohup /usr/lib/logstash-6.5.1/bin/logstash -f /usr/lib/logstash-6.5.1/logstash-IS.conf &
           export PuppetmasterIP=${PuppetMaster.PrivateIp}
           echo "$PuppetmasterIP puppet puppetmaster" >> /etc/hosts
           service puppet restart
@@ -640,7 +671,12 @@ Resources:
           mount -t nfs4 -o nfsvers=4.1 ${WSO2ISEFSFileSystem}.efs.${AWS::Region}.amazonaws.com:/ /mnt/efs
           sleep 300
           export FACTER_profile=is570
-          puppet agent -vt
+          if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              puppet agent -vt
+          fi
+          if [[ ${OperatingSystem} == "CentOS7" ]]; then
+              /opt/puppetlabs/bin/puppet agent -vt
+          fi
           sleep 10
           if [ ! -d "/mnt/efs/server" ]; then
               mkdir -p /mnt/efs/server
@@ -654,21 +690,31 @@ Resources:
           fi
           rm -rf /usr/lib/wso2/wso2is/5.7.0/wso2is-5.7.0/repository/tenants
           ln -s /mnt/efs/tenants /usr/lib/wso2/wso2is/5.7.0/wso2is-5.7.0/repository/tenants
-          apt-get install -y python3-pip
-          pip3 install boto3
           echo "${WSO2ISEFSFileSystem}:/ /mnt/efs efs defaults,_netdev 0 0" >> /etc/fstab
           /usr/lib/wso2/wso2is/5.7.0/wso2is-5.7.0/bin/wso2server.sh start
           ${CustomUserData}
+          if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              end=$((SECONDS+1200))
+              while [ $SECONDS -lt $end ] ; do
+                  wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
+                  if [ $? -eq "0" ] ; then
+                    /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode2AutoScalingGroup --region ${AWS::Region}
+                    break
+                  fi
+              done
+          fi
+          if [[ ${OperatingSystem} == "CentOS7" ]]; then
+              end=$((SECONDS+1200))
+              while [ $SECONDS -lt $end ] ; do
+                  wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
+                  if [ $? -eq "0" ] ; then
+                    /usr/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode2AutoScalingGroup --region ${AWS::Region}
+                    break
+                  fi
+              done
+          fi
           echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
           cat /dev/null > ~/.bash_history && history -c
-          end=$((SECONDS+600))
-          while [ $SECONDS -lt $end ] ; do
-              wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
-              if [ $? -eq "0" ] ; then
-                  /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2ISNode2AutoScalingGroup --region ${AWS::Region}
-                  break
-              fi
-          done
     DependsOn:
       - WSO2ISSecurityGroup
       - WSO2ISLoadBalancer
@@ -685,7 +731,7 @@ Resources:
       TargetGroupARNs:
         - !Ref WSO2ISALBTargetGroup
       VPCZoneIdentifier:
-        - !Ref WSO2ISPrivateSubnet1
+        - !Ref WSO2ISPrivateSubnet2
       Tags:
         - Key: Name
           Value: WSO2ISInstance2
@@ -696,7 +742,7 @@ Resources:
     CreationPolicy:
       ResourceSignal:
         Count: 1
-        Timeout: PT20M
+        Timeout: PT25M
     UpdatePolicy:
       AutoScalingRollingUpdate:
         MaxBatchSize: '2'
@@ -939,6 +985,7 @@ Parameters:
     Default: Ubuntu1804
     AllowedValues:
       - Ubuntu1804
+      - CentOS7
   ElasticSearchEndpoint:
     Type: String
     Default: ""
@@ -958,14 +1005,20 @@ Mappings:
       Ubuntu1804: ami-01cf3b8e778a4b827
   WSO2ISAMIRegionMap:
     ap-southeast-2:
-      Ubuntu1804: ami-05b0cd92df53d8b01
+      CentOS7: ami-08925bf709e8a8a07
+      Ubuntu1804: ami-01b644a7b457ee217
     eu-west-1:
-      Ubuntu1804: ami-001b442605bc38872
+      CentOS7: ami-09366c28423a1c1f6
+      Ubuntu1804: ami-00287e39ddda4e02d
     us-east-1:
-      Ubuntu1804: ami-0305eacef0574b5fc
+      CentOS7: ami-0adcd9752e440d0f9
+      Ubuntu1804: ami-0b74d3aedcf73087c
     us-east-2:
-      Ubuntu1804: ami-020cace0c1a31a53c
+      CentOS7: ami-028f6e82e4d21dc17
+      Ubuntu1804: ami-0711a1be44e9a7c0b
     us-west-1:
-      Ubuntu1804: ami-0f8b13ab717f3c2a9
+      CentOS7: ami-06984a5b470ca1ba1
+      Ubuntu1804: ami-0477ea2787bb8898f
     us-west-2:
-      Ubuntu1804: ami-09a8480d42833b320
+      CentOS7: ami-003dd6436d67bb1a3
+      Ubuntu1804: ami-0a695960d3d986461
