Rename parameter label

--- a/scalable-is/scalable-is.yaml
+++ b/scalable-is/scalable-is.yaml
@@ -73,7 +73,7 @@ Metadata:
       InternalPrepareForTest:
         default: Enable Test Mode
       CustomUserData:
-        default: Customer User Data
+        default: Custom User Data
       WUMUsername:
         default: Username
       WUMPassword:
