--- a/is-with-analytics/is-with-analytics.yaml
+++ b/is-with-analytics/is-with-analytics.yaml
@@ -45,7 +45,7 @@ Metadata:
           - ElasticSearchRegion
     ParameterLabels:
       AWSAccessKeyId:
-        default: AWS Access Key ID
+        default: AWS Access Key
       AWSAccessKeySecret:
         default: AWS Access Secret Key
       OperatingSystem:
