--- a/is-with-analytics/is-with-analytics.yaml
+++ b/is-with-analytics/is-with-analytics.yaml
@@ -204,7 +204,7 @@ Resources:
           CidrIp: 0.0.0.0/0
   WSO2ISDBInstance:
     Type: 'AWS::RDS::DBInstance'
-    DeletionPolicy: Delete
+    DeletionPolicy: Snapshot
     Properties:
       VPCSecurityGroups:
         - !Ref WSO2ISDBInstanceSecurityGroup
